All routes of API Login are now implemented
